--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ body {
   border: 2.5px solid #78A582;
   padding: 0.5rem;
   border-radius: 0.5rem;
+  cursor: pointer;
   font-weight: 600;
   font-size: 1.5rem;
 }
