--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -104,6 +104,7 @@ body{
             border: 2.5px solid $border-color;
             padding: 0.5rem;
             border-radius: 0.5rem;
+            cursor: pointer;
             font: {
                 weight: 600;
                 size: 1.5rem;
