--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
 @import "config";
 
 *{
@@ -7,6 +8,7 @@
 }
 
 body{
+    font-family: $font-stack;
     background-color: $primary-color;
     color: $secondary-color;
     height: 100vh;
@@ -16,12 +18,13 @@ body{
 }
 
 #container{
-    border: 1px  solid $border-color;
-    height: 50vh;
+    border: 3px  solid $border-color;
+    height: 90vh;
     width: 85vw;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    box-shadow: 1rem 1rem 1rem $shadow;
 
     h1{
         text-align: center;
@@ -29,7 +32,7 @@ body{
     }
 
     #value-exp-container{
-        border: 1px solid $border-color;
+        //border: 1px solid $border-color;
         margin: 0 1rem;
         display: flex; 
         flex-direction: column;
@@ -37,7 +40,7 @@ body{
         align-items: center;
             
         #value-container{
-            border: 1px solid $border-color;
+            //border: 1px solid $border-color;
             height: 25vh;
             width: 90%;
             margin: 1rem;
@@ -48,18 +51,25 @@ body{
 
             #value{
                 text-align: center;
-                font-size: 5rem;
+                font-size: 6rem;
             }
         }
 
         #lvl-pop-up-container{
-            border: 1px solid $border-color;
+            border: 2px dashed $border-color;
+            border-radius: 1rem;
+            padding: 1rem;
             display: none;
+            position: relative;
+            z-index: 2;
+            top: 3rem;
+            font-size: 2.3rem;
         }
 
         #exp-container{
-            width: 80%;
-            border: 1px solid $border-color;
+            width: 90%;
+            height: auto; 
+            border: 2px solid $border-color;
             border-radius: 1rem;
             margin: 1rem;
             margin-top: 0.5rem;
@@ -72,14 +82,13 @@ body{
             #exp-bar{
                 width:90%;
                 height: 100%;
-                border: 1px solid black;
                 border-top-right-radius: 1rem;
                 border-bottom-right-radius: 1rem;
 
                 #exp{
                     width: 0%;
                     height:100%;
-                    background-color: blue;
+                    background-color: #002152;
                     border-top-right-radius: 1rem;
                     border-bottom-right-radius: 1rem;
                 }
@@ -89,39 +98,86 @@ body{
                 order: -1;
                 width:10%;
                 height:100%;
+                border-right: 1px solid $border-color;
+                text-align: center;
 
                 #lvl-value{
-                    text-align: center;
+                    font-size: 1.2rem;
+                    font-weight: 600;
                 }
             }
         }
     }
 
     #btn-container{
-        border: 1px solid $border-color;
+        //border: 1px solid $border-color;
         margin: 1rem; 
         padding: 0.5rem 1rem;
-        display: flex; 
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
         justify-content: space-around;
 
         .btn{
             border: 2.5px solid $border-color;
             padding: 0.5rem;
             border-radius: 0.5rem;
+            width: 4rem;
+            text-align: center;
             cursor: pointer;
             font: {
                 weight: 600;
                 size: 1.5rem;
             }
-            //transition
             //transform
+
+            &:hover{
+                background-color: darken($color: $primary-color, $amount: 10%);
+            }
         }
-        
-        #incr-10{
-            order: 1;
+
+        #increment-btn-container{
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 1rem;
+
+            #incr-10{
+                order: 1;
+                max-width: 50%;
+                box-shadow:  0.5rem 0.5rem 1rem $btn-plus-shadow;
+            }
+
+            #increment{
+                max-width: 50%;
+                box-shadow:  0.5rem 0.5rem 1rem $btn-plus-shadow;
+            }
+        }
+
+        #reset{
+            align-self: center;
+            width: 50%;
+            box-shadow:  0.5rem 0.5rem 1rem $btn-shadow;
+        }
+
+        #decrement-btn-container{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 1rem;
+            
+            #btn-10{
+                max-width: 50%;
+                box-shadow:  0.5rem 0.5rem 1rem $btn-minus-shadow;
+            }
+    
+            #decrement{
+                max-width: 50%;
+                order: -1;
+                box-shadow:  0.5rem 0.5rem 1rem $btn-minus-shadow;
+            }
         }
     }
 }
 
-
-
+@import "tablet";
+@import "desktop";
