--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -1,4 +1,4 @@
-$font-stack: 'Rubik Glitch', cursive; 
+$font-stack: 'Audiowide', cursive; 
 $primary-color: #DADADA;    // sfondo grigio chiaro DADADA
 $secondary-color: #121412; 
 $border-color: #004A52;   //border verde 78A582
