--- a/assets/scss/_tablet.scss
+++ b/assets/scss/_tablet.scss
@@ -7,16 +7,20 @@
 
         #value-exp-container{
 
+            //pop-up styling
             #lvl-pop-up-container{
                 top: 1rem;
             }
+            //pop-up styling end
         }
 
+        //button styling
         #btn-container{
 
             .btn{
                 width: 5.5rem;
             }
         }
+        //button styling end
     }
 }
