--- a/assets/scss/_desktop.scss
+++ b/assets/scss/_desktop.scss
@@ -7,6 +7,12 @@
 
         #value-exp-container{
 
+            #value-container{
+
+                height: 25vh;
+                
+            }
+
             //pop up styling
             #lvl-pop-up-container{
                 top: 1.5rem;
