--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -43,7 +43,7 @@ body{
         //value styling
         #value-container{
             //border: 1px solid $border-color;
-            height: 25vh;
+            height: 15vh;
             width: 90%;
             margin: 1rem;
             margin-bottom: 0.5rem;
@@ -64,9 +64,9 @@ body{
             border-radius: 1rem;
             padding: 1rem;
             display: block;
-            visibility: hidden;
+            visibility: visible;
             position: relative;
-            top: 3rem;
+            top: 0.5rem;
             font-size: 2.3rem;
         }
         //pop-up styling end
