--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -64,7 +64,7 @@ body{
             border-radius: 1rem;
             padding: 1rem;
             display: block;
-            visibility: visible;
+            visibility: hidden;
             position: relative;
             top: 0.5rem;
             font-size: 2.3rem;
