semplificate funzioni e sistemata event delegation
ho sistemato il suono al click che veniva triggerato quando si cliccava ogni parte del container dei pulsanti ora invece suona solo qunado si cliccano i pulsanti effettivi, ho semplificato le funzioni rimuovendo i passaggi ridondanti o non necessari e insere sotto funzioni per rendere codice più leggibile

--- a/assets/scss/_desktop.scss
+++ b/assets/scss/_desktop.scss
@@ -28,7 +28,7 @@
             justify-content: space-between;
 
             //increment button styling
-            #increment-btn-container{
+            #plus-btn-container{
                 margin-bottom: 0rem;
                 width: 29%;
 
@@ -70,7 +70,7 @@
             }
 
             //decrement button styling
-            #decrement-btn-container{
+            #minus-btn-container{
                 margin-top: 0rem;
                 width: 29%;
 
