--- a/assets/scss/_desktop.scss
+++ b/assets/scss/_desktop.scss
@@ -28,7 +28,7 @@
             justify-content: space-between;
 
             //increment button styling
-            #plus-btn-container{
+            #increment-btn-container{
                 margin-bottom: 0rem;
                 width: 29%;
 
@@ -70,7 +70,7 @@
             }
 
             //decrement button styling
-            #minus-btn-container{
+            #decrement-btn-container{
                 margin-top: 0rem;
                 width: 29%;
 
