--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -149,7 +149,7 @@ body{
 
 
         //increment button styling
-        #plus-btn-container{
+        #increment-btn-container{
             display: flex;
             justify-content: space-between;
             margin-bottom: 1rem;
@@ -175,7 +175,7 @@ body{
 
 
         //decrement button styling
-        #minus-btn-container{
+        #decrement-btn-container{
             display: flex;
             justify-content: space-between;
             margin-top: 1rem;
